tests/success/pointer_arithmetic_resolve2.bz
function test()
{
	(consteval {
		let p: ?*S = null;
		if (p != null)
		{
			--p;
		}
	});
}

struct S
{
	.i: int32;
}
