tests/error/comptime/dereference_null.bz
function test()
{
	(consteval {
		let p: ?*int32 = null;
		*p;
	});
}
